# synth_project

./: .gitignore  CMakeLists.txt  README.md
documentation/: README.md
documentation/images/: midi_msg_communicataion.ora  raylib_jack.ora
include/: adsr.h  envelop.h  ffmpeg_stuff.h  helpers.h  jack_stuff.h  lf_queue.h  midi_msg.h  model_gen_signal.h  msg_handler.h  oscillator.h  synth_model.h  thread_stuff.h  ui_stuff.h
shaders/: circle.fs  rectangle.fs
src/: consumer_producer1.c  consumer_producer_sine_wave.c  consumer_producer_sine_wave_jack.c  consumer_producer_with_buf.c  envelop.c  ffmpeg_stuff.c  jack_stuff.c  lf_queue.c  midi_msg.c  model_gen_signal.c  msg_handler.c  oscillator.c  ray_out_buffer.c  simple_example_ffmpeg.c  sine_wave.c  sine_wave_ui.c  single_thread_example.c  synth_model.c  thread_stuff.c  ui_stuff.c
test_scripts/: consumer_producer_message_queue.c  consumer_producer_message_queue_with_handler.c  consumer_producer_sine_wave_jack.c  simple_example_ffmpeg.c  sine_wave_ui.c
test_scripts/src/: lf_misc.h  lf_queue.c
